<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RFID Inventur-app</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="benutzer">Benutzer:</string>
    <string name="benutzername">Erwarte Benutzer</string>
    <string name="email">E-Mail:</string>
    <string name="gelesene_geraete">gelesene Geräte:</string>
    <string name="start_anzahl">0</string>
    <string name="button_text">Legende</string>
    <string name="button_beschrieftung">Ok</string>
    <string name="abbrechen_button">Abbrechen</string>
    <string name="geraet_loeschen">Gerät aus der Liste entfernen ?</string>

</resources>
